# bitcoin-analysis

./: .gitignore  LICENSE  README.md
bot/: README.md  config.py  data.py  features.py  funding_collector.py  live.py  paper_trader.py  train.py
bot/logs/: trades.csv  trades_v4.csv
btc-rag/: pyproject.toml
btc-rag/src/btc_rag/: __init__.py  clickhouse.py  llm.py  schema.py  server.py
btc-rag/src/btc_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
btc-rag/tests/: test_ask.py
dashboard/: dashboard.py
etl/: 01_exploracion_utxo.ipynb  capa1_btccore_parquet.py  capa2_utxo_parquet.py  capa3_block_metrics.py  capa4_binance.py  capa5_filtered.py  capa6_streaming.py  capa7_balance.py  capa8_balance_gt10.py  cron_weekly_update.sh
etl/.ipynb_checkpoints/: 01_exploracion_utxo-checkpoint.ipynb  capa2_binance-checkpoint.py  capa2_utxo_parquet_snapshot-checkpoint.py  capa3_ml-checkpoint.py  capa4_load-checkpoint.py
notebooks/: 01_exploracion_utxo.ipynb  02_fees_over_time.ipynb  03_momentum_signal.ipynb  04_mempool_heatmap.ipynb  05_fees_model.ipynb  06_entity_clustering.ipynb  10_whale_tracker.ipynb
notebooks/.ipynb_checkpoints/: 01_exploracion_utxo-checkpoint.ipynb
